Closed
Bug 608981
Opened 15 years ago
Closed 15 years ago
Enable building of places in Thunderbird, but disable history by default
Categories
(Thunderbird :: Build Config, defect)
Thunderbird
Build Config
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.3a2
People
(Reporter: standard8, Assigned: standard8)
References
Details
Attachments
(1 file, 1 obsolete file)
|
13.84 KB,
patch
|
philor
:
review+
|
Details | Diff | Splinter Review |
To move the Thunderbird build closer to Firefox, and to easily enable interesting things like favicons for content tabs, we should start building places. Extensions should also be able to use it if they wish to.
I can't see a reason at the moment for us to enable storing of history by default, so I think we should disable it by default but keep reasonable defaults in place. I believe that favicon storing/usage will still work even if the history is disabled (I think it relies on other prefs).
Comment 1•15 years ago
|
||
Clarification question: can we do browser navigation (back/forward) w/o history? Those seem like likely useful things in site-specific contentTabs.
| Assignee | ||
Comment 2•15 years ago
|
||
(In reply to comment #1)
> Clarification question: can we do browser navigation (back/forward) w/o
> history? Those seem like likely useful things in site-specific contentTabs.
With places built, it should be the same as setting Firefox to "Never Remember History".
Without places, I'm not sure. Although you said earlier that it works on trunk but not 1.9.2...
| Assignee | ||
Comment 3•15 years ago
|
||
This patch enables building of places within Thunderbird, but history disabled by default.
It needs a core patch to pass tests, as the core tests assume history is enabled by default. I'll attach a patch in a moment that fixes all but one of those tests.
The remaining test that I haven't fixed currently hangs and I haven't worked out why yet.
| Assignee | ||
Comment 4•15 years ago
|
||
test_doSetAndLoadFaviconForPage_failures.js is the test with an issue here. It is currently disabled with an early return.
Comment 5•15 years ago
|
||
yes, ignore comment #1.
| Assignee | ||
Updated•15 years ago
|
Assignee: nobody → bugzilla
| Assignee | ||
Comment 6•15 years ago
|
||
Comment on attachment 487733 [details] [diff] [review]
Force enabling of places in core xpcshell-tests
The full patch is now on bug 610974.
Attachment #487733 -
Attachment is obsolete: true
| Assignee | ||
Comment 7•15 years ago
|
||
Comment on attachment 487731 [details] [diff] [review]
Enable places in Thunderbird
With the patch in bug 610974, all the tests pass on try server. I believe this is everything we need.
Attachment #487731 -
Flags: review?(philringnalda)
Comment 8•15 years ago
|
||
Comment on attachment 487731 [details] [diff] [review]
Enable places in Thunderbird
Looks good to me.
Attachment #487731 -
Flags: review?(philringnalda) → review+
If places is enabled in TB, will this fix the following error (I see everytime I start TB)?
Error: Places database may be locked: [Exception... "Component returned failure code: 0x80040154 (NS_ERROR_FACTORY_NOT_REGISTERED) [nsIDocShellHistory.useGlobalHistory]" nsresult: "0x80040154 (NS_ERROR_FACTORY_NOT_REGISTERED)" location: "JS frame :: chrome://messenger/content/specialTabs.js :: anonymous :: line 170" data: no]
File: chrome://messenger/content/specialTabs.js
Line: 172
Or is this unrelated?
| Assignee | ||
Comment 10•15 years ago
|
||
(In reply to comment #9)
> If places is enabled in TB, will this fix the following error (I see everytime
> I start TB)?
Most likely, though I haven't tested it yet.
| Assignee | ||
Comment 11•15 years ago
|
||
Just to keep folks updated, this landed but got backed out again because I hadn't taken account of the c++ tests - bug 614550 fixes the failure, so I'll attempt to re-land following that.
| Assignee | ||
Comment 12•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•15 years ago
|
Target Milestone: --- → Thunderbird 3.3a2
You need to log in
before you can comment on or make changes to this bug.
Description
•