Bug 608981 - Enable building of places in Thunderbird, but disable history by default; r=philringnalda